# gallardizer

./: LICENSE  README.md
gallardizer/: Cargo.toml  HelloWorld.sol
gallardizer/contracts/: HelloWorld.sol  Test.sol  UniswapV2Router02.sol
gallardizer/src/: engine.rs  main.rs  utils.rs
gallardizer/src/engine/: detectors.rs  gallardizer_engine.rs  parser.rs  report_generator.rs
gallardizer/src/engine/detectors/: Gas.rs  Low.rs  Med.rs  NonCritical.rs  pragma_version.rs
gallardizer/src/engine/detectors/Gas/: division_by_two.rs  storage_for_mapping_array.rs  use_custom_errors.rs
gallardizer/src/engine/detectors/Low/: division_by_zero.rs  ext_call_for_loop.rs  loss_of_precision.rs  pragma_version.rs  require_instead_of_assert.rs  unchecked_array_length.rs
gallardizer/src/engine/detectors/Med/: centralization_risk.rs  safe_mint_erc721.rs  safe_transfer_erc721.rs  solmate_safetransfer.rs
gallardizer/src/engine/detectors/NonCritical/: keccak_immutable.rs  loc_too_long.rs  magic_numbers.rs  missing_indexed_fields.rs  numeric_timevariables.rs  reentrancy_modifier_precedence.rs  revert_strings.rs  scientific_notation.rs  typos.rs
gallardizer/src/utils/: file_processor.rs  markdown_generator.rs
